styles.css
:root {
    --primary-color: #adf0d4;
    --secondary-color: #76ABAE;
    --bg-color: #222831;
}

*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif; 
   transition-duration: 200ms;
}

.iconSVG {
  width: 20%;
  height: 20%;
}

.bentoIcons {
  fill: var(--secondary-color);
  width: 80%;
  margin: auto;
}

.grid-container {
  max-width: 900px;
  margin: 1rem;
  display: grid;
  grid-auto-columns: 1fr;
  gap: .5rem;
  grid-template-areas: none;
    "box1  box2  box3  box4  box4  box5  box5"
    "box6  box6  box7  box7  box7  box8  box9"
    "box10 box11 box7  box7  box7  box8  box9"
    "box12 box12 box13 box13 box13 box14 box14"
    ;
 
}

.grid-item {
  border-radius: 30px;
  background: #222831;
  box-shadow: inset 12px -12px 24px #1b1f26,
            inset -12px 12px 24px #29313c;
  padding: .5rem 1rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  border-radius: .75rem;
  overflow: hidden;
  transition: all 200ms ease;
}

.grid-item:hover {
  cursor: pointer;
  background-color: #555;
  outline: 1px solid #fff;
}

.grid-item-1 {
  grid-area: box1;
}

.grid-item-2 {
  grid-area: box2;
}

.grid-item-3 {
  grid-area: box3;
}

.grid-item-4 {
  grid-area: box4;
}

.grid-item-5 {
  grid-area: box5;
}

.grid-item-6 {
  grid-area: box6;
}

.grid-item-7 {
  grid-area: box7;
}

.grid-item-8 {
  grid-area: box8;
}

.grid-item-9 {
  grid-area: box9;
}

.grid-item-10 {
  grid-area: box10;
}

.grid-item-11 {
  grid-area: box11;
}

.grid-item-12 {
  grid-area: box12;
}

.grid-item-13 {
  grid-area: box13;
}

.grid-item-14 {
  grid-area: box14;
}



.linkIcons {
  font-size: 1.8em;
}

h1 {
  font-size: 3.0em;
  background: #CFE7FA;
background: linear-gradient(to right, #CFE7FA 0%, #6393C1 100%);
-webkit-background-clip: text;
-webkit-text-fill-color: transparent;

}

h2 {
  font-size: 2.0em;
}

body {
    background: var(--bg-color);
    color: var(--primary-color);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    gap: 72px;
    padding: 14px;
  
}

.darkerText {
    color: var(--secondary-color);
}


header, main, footer {
    max-width: 1000px;
    margin: 0 auto;
    width: 100%;
}

p {
    font-size: 1.5em;
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 14px;
}

nav {
    color: var(--secondary-color);
    display: flex;
    align-items: center;
    gap: 32px;
}

nav a {
    cursor: pointer;
    text-decoration: none;
}

nav a:hover {
    opacity: 0.7;
}

main, section, .nameContainer {
    display: flex;
    flex-direction: column;
}

main {
    gap: 64px;
    padding-bottom: 64px;
}

section {
    gap: 48px;
}

.nameContainer {
    gap: 8px;
}

.statsContainer {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: 24px;
}

.imgContainer {
    width: 200px;
    height: 200px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
}

.imgContainer img {
    display: inline;
    margin: 0 auto;
    height: 100%;
    width: auto;
    aspect-ratio: 1/1;
    object-fit: cover;
}

.stats {
    display: flex;
    flex-direction: column;
    gap: 14px;
}

.stats>div {
    flex: 1;
    display: flex;
    align-items: center;
    gap: 8px;
}

.neumo {
  display: flex;
  flex-direction: column;
  align-items: center;
  object-fit: contain;
  width: 600px;
  height: 400px;
  border-radius: 50px;
  background: #222831;
  box-shadow:  20px 20px 60px #1d222a,
             -20px -20px 60px #272e38;
}

.stats div i {
    font-size: 2.0em;
}

.stats div div {
    display: grid;
    place-items: center;
    min-width: 40px;
}

.aboutMe {
    line-height: 1.5em;
}

.projectContainer {
    display: flex;
    flex-direction: column;
    gap: 32px;
  }

  .headerText {
    margin-bottom: 24px;
  }

  .projectItem {
    display: flex;
    align-items: stretch;
    gap: 24px;
  }

  .projectItem div:first-child {
    display: flex;
    flex-direction: column;
    gap: 14px;
  }

  .projectItem>div:last-child {
    aspect-ratio: 16/9;
    max-width: 30%;
    overflow: hidden;
    border-radius: 8px;
  }

  .projectItem>div:last-child img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: flex;
    flex-direction: column;
  }


.linkContainer {
    display: flex;
    align-items: center;
    gap: 24px;
}

.linkItem {
    display: flex;
    flex-direction: row !important;
    align-items: center;
    gap: 14px !important;
    color: var(--primary-color);
    text-decoration: none;
    cursor: pointer;
}

.linkItem:hover {
    opacity: 0.7;
}

.linkItem p {
    font-size: 0.9em;
}

@media (max-width: 768px) {
  .grid-container {
    grid-template-areas:
      "box1  box2  box3  box6"
      "box4  box4  box3  box6"
      "box5  box7  box7  box10"
      "box9  box7  box7  box8"
      "box12 box12 box11 box11"
      "box13 box13 box14 box14";
  }
}

/* @media (max-width: 540px) {
  .grid-container { 
    grid-template-areas:
    "box7  box7"
    "box1  box2"
    "box3  box4"
    "box5  box6"
    "box7  box8"
    "box9  box10"
    "box11 box12"
    "box13 box14";
  }
  .grid-item {
    padding: .75rem 1rem;
  }
  .grid-item-7 background {
    height: 250px;
  }
} */

/* @media (min-width: 640px) {
    .statsContainer{
        flex-direction: row;
    }
    
    .stats {
        gap: 0px;
    }

    .aboutMe {
        width: 80%;
        margin-right: auto;
    }
} */

.bn13 {
    display: inline-block;
    padding: 0.3em 0.5em;
    border: 1px solid var(--secondary-color);
    margin: 0 2em 2em 0;
    border-radius: 0.5em;
    box-sizing: border-box;
    text-decoration: none;
    font-family: "Nunito", sans-serif;
    font-weight: 300;
    color: var(--secondary-color);
    text-align: center;
    transition: all 0.5s;
    animation: bn13bouncy 5s infinite linear;
    position: relative;
  }
  
  .bn13:hover {
    background-color: var(--secondary-color);
    color: #000000;
  }
  
  @keyframes bn13bouncy {
    0% {
      top: 0em;
    }
    40% {
      top: 0em;
    }
    43% {
      top: -0.9em;
    }
    46% {
      top: 0em;
    }
    48% {
      top: -0.4em;
    }
    50% {
      top: 0em;
    }
    100% {
      top: 0em;
    }
  }

  

